--- a/Freight/Views/Home/SignUp.cshtml
+++ b/Freight/Views/Home/SignUp.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label style="width:100%">Email</label>
-                <input type="text" class="form-group" id="exampleInputEmail1" placeholder="Mentor Reference's Email" />
+                <input type="text" class="form-group" id="exampleInputEmail1" placeholder="Email" />
                 <span id="ReferenceDomain" style="        position: relative;
         float: right;
         top: -34px;
