--- a/Freight/Views/_Header.cshtml
+++ b/Freight/Views/_Header.cshtml
@@ -1,15 +1,15 @@
 ﻿<nav>
     <input id="nav-toggle" type="checkbox">
-    <div class="logo" >
+    <div class="logo">
         <a href="/Calculator/Index">
             <img src="https://ebiz5-staging.mentormedia.com/RFID-WIREFRAME/_nuxt/img/logo.9b9a022.png"
                  id="icon" alt="User Icon" style="height: 65px; margin-left:-30px" />
         </a>
-       
+
     </div>
     <div class="links">
 
-        <button type="button" class="btn btn-danger btn-lg" style="margin-left:100%" onclick="location.href='@Url.Action("Index", "Home")'">Logout</button>
+        <button type="button" class="btn btn-danger btn-lg" id="btnLogout" style="margin-left:100%">Logout</button>
 
     </div>
     <label for="nav-toggle" class="icon-burger">
@@ -18,3 +18,22 @@
         <div class="line"></div>
     </label>
 </nav>
+
+<script>
+
+    $("#btnLogout").click(function () {
+        //check year        
+        $.ajax({
+            url: '/Account/Logout',
+            type: 'GET',
+            success: function (data) {
+                 location.href = '@Url.Action("Index","Home")';
+            },
+            error: function (xhr, error, status) {
+                
+                console.log(error, status);
+            }
+        });
+    })
+</script>
+
