--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -46,10 +46,10 @@
 
             <ul id="menu-content" class="menu-content collapse out">
                 <a href="/UAT/Freight_Wireframe/Calculator/Index" style="text-decoration:none">
-                <li data-toggle="collapse" data-target="#products" class="collapsed active">
-                    <i class="fa fa-lg fa-dashboard fa-lg" style="padding-right:10px"></i>
-                    Calculator
-                </li>
+                    <li data-toggle="collapse" data-target="#products" class="collapsed active">
+                        <i class="fa fa-lg fa-dashboard fa-lg" style="padding-right:10px"></i>
+                        Calculator
+                    </li>
 
                 </a>
                 <a href="/UAT/Freight_Wireframe/UploadRate/Index" style="text-decoration:none">
@@ -59,16 +59,16 @@
                     </li>
                 </a>
                 <a href="/UAT/Freight_Wireframe/SurchargeRate/Index" style="text-decoration:none">
-                <li data-toggle="collapse" data-target="#new" id="surrate" class="collapsed">
-                    <i class="fa fa-lg fa-caret-up" style="padding-right:8px"></i>
-                    Surcharge Rate
-                </li>
+                    <li data-toggle="collapse" data-target="#new" id="surrate" class="collapsed">
+                        <i class="fa fa-lg fa-caret-up" style="padding-right:8px"></i>
+                        Surcharge Rate
+                    </li>
                 </a>
-                 <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
-                <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
-                    <i class="fa fa-lg fa-user" style="padding-right:8px"></i>
-                    User
-                </li>
+                <a href="/UAT/Freight_Wireframe/Home/AssignRole" style="text-decoration:none">
+                    <li data-toggle="collapse" data-target="#new" id="asrole" class="collapsed">
+                        <i class="fa fa-lg fa-user" style="padding-right:8px"></i>
+                        User
+                    </li>
                 </a>
             </ul>
         </div>
@@ -84,41 +84,20 @@
                     <div class="col-xs-6 col-md-4" style="margin-top:15px;">
                         <label>Origin<i style="color:red" title="Required">*</i></label>
                         <select class="form-select form-control-lg mb-5" id="sourceSelect">
-                            <option selected>Origin</option>
-                            <option value="Singapore">Singapore</option>
-                            <option value="Argentina">Argentina</option>
-                            <option value="Australia">Australia</option>
-                            <option value="Austria">Austria</option>
-                            <option value="Belgium">Belgium</option>
-                            <option value="Bolivia">Bolivia</option>
-                            <option value="Brazil">Brazil</option>
-                            <option value="Canada">Canada</option>
-                            <option value="Chile">Chile</option>
-
+                            <option value="-1">Please Select a Country</option>
                         </select>
                     </div>
 
                     <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
                         <label>Destination<i style="color:red" title="Required">*</i></label>
                         <select class="form-select form-control-lg mb-5" id="destinationSelect">
-                            <option selected>Destination</option>
-                            <option value="Singapore">Singapore</option>
-                            <option value="Argentina">Argentina</option>
-                            <option value="Australia">Australia</option>
-                            <option value="Austria">Austria</option>
-                            <option value="Belgium">Belgium</option>
-                            <option value="Bolivia">Bolivia</option>
-                            <option value="Brazil">Brazil</option>
-                            <option value="Canada">Canada</option>
-                            <option value="Chile">Chile</option>
+                            <option value="-1">Please Select a Country</option>
                         </select>
                     </div>
                     <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
                         <label>Carrier</label>
                         <select class="form-select form-control-lg mb-5" id="carrierSelect">
-                            <option selected value="0">Carrier</option>
-                            <option value="1">Fedex</option>
-                            <option value="2">DHL</option>
+                            <option value="-1">Please Select a Carrier</option>
                         </select>
                     </div>
 
@@ -134,7 +113,7 @@
                     <div class="col-xs-6 col-md-4">
                         <label id="lablePackaging">Packaging type</label>
                         <select class="form-select form-control-lg mb-5" id="packagingSelect">
-                            <option selected value="0">Packaging Type</option>
+                            <option value="-1">Please Select a Packaging Type</option>
                         </select>
                     </div>
                     <div class="col-xs-6 col-md-4">
@@ -230,6 +209,46 @@
         var serviceOptionDefault = " <option selected value='0'>Services Type</option>";
         var pakagingOptionDefault = "<option selected value='0'>Packaging Type</option>";
         var weightOptionDefault = "<option selected value='0'>Weight</option>";
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListCountry",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Country</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#sourceSelect").html(s);
+                $("#destinationSelect").html(s);
+            }
+        });
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListCarriers",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Carrier</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#carrierSelect").html(s);
+            }
+        });
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListPackageType",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Packing</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#packagingSelect").html(s);
+            }
+        });
         // Event choose carrier
         $("#carrierSelect").change(function () {
             var valueOfCarrier = $("#carrierSelect").val();
@@ -288,7 +307,7 @@
 
             var packagingValue = $(this).val();
             var weightElement = $("#weightSelect");
-     
+
             if (packagingValue == '0' || packagingValue == '5') {
                 $('#heightGroup').attr('hidden', false);
                 $('#widthGroup').attr('hidden', false);
@@ -316,7 +335,7 @@
                 weightElement.html(option3);
             }
 
-         
+
 
 
         })
@@ -329,8 +348,8 @@
             var serviceValue = $("#servicesSelect").val()
             var packagingSelect = $("#packagingSelect").val()
             var weightSelect = $("#weightSelect").val()
-            var priorityEnvelope = { "Carrier": "Fedex", "Service": "Priority", "Packaging": "Envelope", "Weight": "0-2.5", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 1000,"AfterSC":1100 }
-            var priorityPak = { "Carrier": "Fedex", "Service": "Priority", "Packaging": "Pak", "Weight": "0.5-2.5", "Surcharge": "11.2%", "Workingdays": "2-4", "BeforeSC": 2000,"AfterSC": 2200 }
+            var priorityEnvelope = { "Carrier": "Fedex", "Service": "Priority", "Packaging": "Envelope", "Weight": "0-2.5", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 1000, "AfterSC": 1100 }
+            var priorityPak = { "Carrier": "Fedex", "Service": "Priority", "Packaging": "Pak", "Weight": "0.5-2.5", "Surcharge": "11.2%", "Workingdays": "2-4", "BeforeSC": 2000, "AfterSC": 2200 }
             var priorityPackage = { "Carrier": "Fedex", "Service": "Priority", "Packaging": "Package", "Weight": "0.5-99,999", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 3000, "AfterSC": 3300 }
             var economyEnvelope = { "Carrier": "Fedex", "Service": "Economy", "Packaging": "Envelope", "Weight": "0-2.5", "Surcharge": "10%", "Workingdays": "3-6", "BeforeSC": 4000, "AfterSC": 4400 }
             var economyPak = { "Carrier": "Fedex", "Service": "Economy", "Packaging": "Pak", "Weight": "0.5-2.5", "Surcharge": "10%", "Workingdays": "3-6", "BeforeSC": 5000, "AfterSC": 5500 }
@@ -338,7 +357,7 @@
             var priorityFreightNIL = { "Carrier": "Fedex", "Service": "Priority Freight", "Packaging": "NIL", "Weight": "68-99,999", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 7000, "AfterSC": 7700 }
             var economyFreightEnvelope = { "Carrier": "Fedex", "Service": "Economy Freight", "Packaging": "NIL", "Weight": "68.5-99,999", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 8000, "AfterSC": 8800 }
 
-            var expressEnvelope = { "Carrier": "DHL", "Service": "Express", "Packaging": "Envelope", "Weight": "0-2.5", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 1000, "AfterSC": 1100}
+            var expressEnvelope = { "Carrier": "DHL", "Service": "Express", "Packaging": "Envelope", "Weight": "0-2.5", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 1000, "AfterSC": 1100 }
             var expressPackage = { "Carrier": "DHL", "Service": "Express", "Packaging": "Package", "Weight": "0.5-99,999", "Surcharge": "10%", "Workingdays": "2-4", "BeforeSC": 3000, "AfterSC": 3300 }
 
 
