--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -249,6 +249,21 @@
                 $("#packagingSelect").html(s);
             }
         });
+
+        $.ajax({
+            type: "GET",
+            url: "/Utility/GetListServices",
+            dataType: "json",
+            contentType: "application/json;charset=utf-8",
+            success: function (data) {
+                var s = '<option value="-1">Please Select a Service Type</option>';
+                for (var i = 0; i < data.data.length; i++) {
+                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                }
+                $("#servicesSelect").html(s);
+            }
+        });
+        
         // Event choose carrier
         $("#carrierSelect").change(function () {
             var valueOfCarrier = $("#carrierSelect").val();
